--- a/tag.html
+++ b/tag.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<title>Tag - Jonathan Chang</title>
 	<link rel="canonical" href="http://localhost:4000/tag.html">
-	<meta name="description" content="Artificial Intelligence trends and concepts made easy.">
+	<meta name="description" content="Software engineer.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 <script type="application/ld+json">
@@ -23,7 +23,7 @@
   "abstract": "",
     "keywords": "",
     "wordcount": "75",
-    "image": ["http://localhost:4000/assets/img"],
+    "image": ["http://localhost:4000/tag.htmlheader.jpg"],
   "datePublished": "",
   "dateModified": "",
   "author": {
@@ -44,7 +44,7 @@
 <meta property="og:type" content="article"/>
 <meta property="og:title" content="Tag"/>
 <meta property="og:description" content=""/>
-<meta property="og:image" content="http://localhost:4000/assets/img"/>
+<meta property="og:image" content="http://localhost:4000/tag.htmlheader.jpg"/>
 <meta property="og:image:alt" content="Tag"/>
 <meta property="og:site_name" content="Jonathan Chang" />
 <meta property="article:published_time" content="" />
@@ -54,7 +54,7 @@
 <!-- Schema.org markup for Google -->
 <meta itemprop="name" content="Tag">
 <meta itemprop="description" content="">
-<meta itemprop="image" content="http://localhost:4000/assets/img">
+<meta itemprop="image" content="http://localhost:4000/tag.htmlheader.jpg">
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="">
@@ -63,7 +63,7 @@
 <meta name="twitter:creator" content="">
 <meta data-rh="true" name="twitter:label1" content="Word count"/>
 <meta data-rh="true" name="twitter:data1" content="75"/>
-<meta name="twitter:image:src" content="http://localhost:4000/assets/img/">
+<meta name="twitter:image:src" content="http://localhost:4000/tag.htmlheader.jpg">
 	<!-- Windows Phone -->
 	<meta name="msapplication-navbutton-color" content="#311e3e">
 	<!-- iOS Safari -->
