--- a/asu/index.html
+++ b/asu/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<title>Sampling masters degrees. - Jonathan Chang</title>
 	<link rel="canonical" href="http://localhost:4000/asu/">
-	<meta name="description" content="Software engineer.">
+	<meta name="description" content="ASU Cybersecurity MasterTrack and how it compares to its masters program.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 <script type="application/ld+json">
@@ -20,8 +20,8 @@
     "@type": "WebPage",
     "@id": "http://localhost:4000"},
   "headline": "Sampling masters degrees.",
-  "abstract": "",
-    "keywords": "",
+  "abstract": "ASU Cybersecurity MasterTrack and how it compares to its masters program.",
+    "keywords": "asu cybersecurity mastertrack masters software security coursera testing cryptography",
     "wordcount": "553",
     "image": ["http://localhost:4000/asu/header.jpg"],
   "datePublished": "",
@@ -43,23 +43,23 @@
 <meta property="og:url" content="http://localhost:4000/asu/"/>
 <meta property="og:type" content="article"/>
 <meta property="og:title" content="Sampling masters degrees."/>
-<meta property="og:description" content=""/>
+<meta property="og:description" content="ASU Cybersecurity MasterTrack and how it compares to its masters program."/>
 <meta property="og:image" content="http://localhost:4000/asu/header.jpg"/>
 <meta property="og:image:alt" content="Sampling masters degrees."/>
 <meta property="og:site_name" content="Jonathan Chang" />
 <meta property="article:published_time" content="" />
 <meta property="article:modified_time" content="" />
-<meta property="article:tag" content="" />
+<meta property="article:tag" content="asu cybersecurity mastertrack masters software security coursera testing cryptography" />
 <meta property="fb:admins" content="j.a.chang820" />
 <!-- Schema.org markup for Google -->
 <meta itemprop="name" content="Sampling masters degrees.">
-<meta itemprop="description" content="">
+<meta itemprop="description" content="ASU Cybersecurity MasterTrack and how it compares to its masters program.">
 <meta itemprop="image" content="http://localhost:4000/asu/header.jpg">
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="">
 <meta name="twitter:title" content="Sampling masters degrees.">
-<meta name="twitter:description" content="">
+<meta name="twitter:description" content="ASU Cybersecurity MasterTrack and how it compares to its masters program.">
 <meta name="twitter:creator" content="">
 <meta data-rh="true" name="twitter:label1" content="Word count"/>
 <meta data-rh="true" name="twitter:data1" content="553"/>
@@ -234,7 +234,7 @@
 
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork">
     <meta itemprop="headline" content="Sampling masters degrees.">
-
+<meta itemprop="description" content="ASU Cybersecurity MasterTrack and how it compares to its masters program.">
 
 
     <div class="page-image">
