--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Jonathan Chang</title>
+	<title>Jonathan Chang Personal Site - Jonathan Chang</title>
 	<link rel="canonical" href="http://localhost:4000/">
-	<meta name="description" content="Software engineer.">
+	<meta name="description" content="Recent credentials and projects by Jonathan Chang.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 <script type="application/ld+json">
@@ -19,9 +19,9 @@
   "mainEntityOfPage": {
     "@type": "WebPage",
     "@id": "http://localhost:4000"},
-  "headline": "Jonathan Chang",
-  "abstract": "",
-    "keywords": "",
+  "headline": "Jonathan Chang Personal Site",
+  "abstract": "Recent credentials and projects by Jonathan Chang.",
+    "keywords": "jonathan chang resume ucla micromasters writings software engineering creative",
     "wordcount": "199",
     "image": ["http://localhost:4000/header.jpg"],
   "datePublished": "",
@@ -42,24 +42,24 @@
 <!-- Open Graph data -->
 <meta property="og:url" content="http://localhost:4000/"/>
 <meta property="og:type" content="article"/>
-<meta property="og:title" content="Jonathan Chang"/>
-<meta property="og:description" content=""/>
+<meta property="og:title" content="Jonathan Chang Personal Site"/>
+<meta property="og:description" content="Recent credentials and projects by Jonathan Chang."/>
 <meta property="og:image" content="http://localhost:4000/header.jpg"/>
-<meta property="og:image:alt" content=""/>
+<meta property="og:image:alt" content="Jonathan Chang Personal Site"/>
 <meta property="og:site_name" content="Jonathan Chang" />
 <meta property="article:published_time" content="" />
 <meta property="article:modified_time" content="" />
-<meta property="article:tag" content="" />
+<meta property="article:tag" content="jonathan chang resume ucla micromasters writings software engineering creative" />
 <meta property="fb:admins" content="j.a.chang820" />
 <!-- Schema.org markup for Google -->
-<meta itemprop="name" content="Jonathan Chang">
-<meta itemprop="description" content="">
+<meta itemprop="name" content="Jonathan Chang Personal Site">
+<meta itemprop="description" content="Recent credentials and projects by Jonathan Chang.">
 <meta itemprop="image" content="http://localhost:4000/header.jpg">
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="">
-<meta name="twitter:title" content="Jonathan Chang">
-<meta name="twitter:description" content="">
+<meta name="twitter:title" content="Jonathan Chang Personal Site">
+<meta name="twitter:description" content="Recent credentials and projects by Jonathan Chang.">
 <meta name="twitter:creator" content="">
 <meta data-rh="true" name="twitter:label1" content="Word count"/>
 <meta data-rh="true" name="twitter:data1" content="199"/>
