--- a/mitx/index.html
+++ b/mitx/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<title>Journey in rigorous statistics. - Jonathan Chang</title>
 	<link rel="canonical" href="http://localhost:4000/mitx/">
-	<meta name="description" content="Software engineer.">
+	<meta name="description" content="MITx Statistics and Data Science Micromasters and how it compares to its PhD program.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 <script type="application/ld+json">
@@ -20,8 +20,8 @@
     "@type": "WebPage",
     "@id": "http://localhost:4000"},
   "headline": "Journey in rigorous statistics.",
-  "abstract": "",
-    "keywords": "",
+  "abstract": "MITx Statistics and Data Science Micromasters and how it compares to its PhD program.",
+    "keywords": "mit mitx edx micromasters statistics data machine learning probability modeling",
     "wordcount": "576",
     "image": ["http://localhost:4000/mitx/header.jpg"],
   "datePublished": "",
@@ -43,23 +43,23 @@
 <meta property="og:url" content="http://localhost:4000/mitx/"/>
 <meta property="og:type" content="article"/>
 <meta property="og:title" content="Journey in rigorous statistics."/>
-<meta property="og:description" content=""/>
+<meta property="og:description" content="MITx Statistics and Data Science Micromasters and how it compares to its PhD program."/>
 <meta property="og:image" content="http://localhost:4000/mitx/header.jpg"/>
 <meta property="og:image:alt" content="Journey in rigorous statistics."/>
 <meta property="og:site_name" content="Jonathan Chang" />
 <meta property="article:published_time" content="" />
 <meta property="article:modified_time" content="" />
-<meta property="article:tag" content="" />
+<meta property="article:tag" content="mit mitx edx micromasters statistics data machine learning probability modeling" />
 <meta property="fb:admins" content="j.a.chang820" />
 <!-- Schema.org markup for Google -->
 <meta itemprop="name" content="Journey in rigorous statistics.">
-<meta itemprop="description" content="">
+<meta itemprop="description" content="MITx Statistics and Data Science Micromasters and how it compares to its PhD program.">
 <meta itemprop="image" content="http://localhost:4000/mitx/header.jpg">
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="">
 <meta name="twitter:title" content="Journey in rigorous statistics.">
-<meta name="twitter:description" content="">
+<meta name="twitter:description" content="MITx Statistics and Data Science Micromasters and how it compares to its PhD program.">
 <meta name="twitter:creator" content="">
 <meta data-rh="true" name="twitter:label1" content="Word count"/>
 <meta data-rh="true" name="twitter:data1" content="576"/>
@@ -234,7 +234,7 @@
 
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork">
     <meta itemprop="headline" content="Journey in rigorous statistics.">
-
+<meta itemprop="description" content="MITx Statistics and Data Science Micromasters and how it compares to its PhD program.">
 
 
     <div class="page-image">
