--- a/past_career/index.html
+++ b/past_career/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<title>It was rewarding, but I wanted to solve bigger problems. - Jonathan Chang</title>
 	<link rel="canonical" href="http://localhost:4000/past_career/">
-	<meta name="description" content="Software engineer.">
+	<meta name="description" content="Challenges in past career as warehouse administrator assistant.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 <script type="application/ld+json">
@@ -20,8 +20,8 @@
     "@type": "WebPage",
     "@id": "http://localhost:4000"},
   "headline": "It was rewarding, but I wanted to solve bigger problems.",
-  "abstract": "",
-    "keywords": "",
+  "abstract": "Challenges in past career as warehouse administrator assistant.",
+    "keywords": "warehouse logistics administrator assistant communication",
     "wordcount": "650",
     "image": ["http://localhost:4000/past_career/header.jpg"],
   "datePublished": "",
@@ -43,23 +43,23 @@
 <meta property="og:url" content="http://localhost:4000/past_career/"/>
 <meta property="og:type" content="article"/>
 <meta property="og:title" content="It was rewarding, but I wanted to solve bigger problems."/>
-<meta property="og:description" content=""/>
+<meta property="og:description" content="Challenges in past career as warehouse administrator assistant."/>
 <meta property="og:image" content="http://localhost:4000/past_career/header.jpg"/>
 <meta property="og:image:alt" content="It was rewarding, but I wanted to solve bigger problems."/>
 <meta property="og:site_name" content="Jonathan Chang" />
 <meta property="article:published_time" content="" />
 <meta property="article:modified_time" content="" />
-<meta property="article:tag" content="" />
+<meta property="article:tag" content="warehouse logistics administrator assistant communication" />
 <meta property="fb:admins" content="j.a.chang820" />
 <!-- Schema.org markup for Google -->
 <meta itemprop="name" content="It was rewarding, but I wanted to solve bigger problems.">
-<meta itemprop="description" content="">
+<meta itemprop="description" content="Challenges in past career as warehouse administrator assistant.">
 <meta itemprop="image" content="http://localhost:4000/past_career/header.jpg">
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="">
 <meta name="twitter:title" content="It was rewarding, but I wanted to solve bigger problems.">
-<meta name="twitter:description" content="">
+<meta name="twitter:description" content="Challenges in past career as warehouse administrator assistant.">
 <meta name="twitter:creator" content="">
 <meta data-rh="true" name="twitter:label1" content="Word count"/>
 <meta data-rh="true" name="twitter:data1" content="650"/>
@@ -234,7 +234,7 @@
 
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork">
     <meta itemprop="headline" content="It was rewarding, but I wanted to solve bigger problems.">
-
+<meta itemprop="description" content="Challenges in past career as warehouse administrator assistant.">
 
 
     <div class="page-image">
