--- a/writings/index.html
+++ b/writings/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<title>Writing Samples - Jonathan Chang</title>
 	<link rel="canonical" href="http://localhost:4000/writings/">
-	<meta name="description" content="Software engineer.">
+	<meta name="description" content="Description of writing samples from different academic programs.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 <script type="application/ld+json">
@@ -20,8 +20,8 @@
     "@type": "WebPage",
     "@id": "http://localhost:4000"},
   "headline": "Writing Samples",
-  "abstract": "",
-    "keywords": "",
+  "abstract": "Description of writing samples from different academic programs.",
+    "keywords": "writing samples technical modeling robotics ethics analysis capstone",
     "wordcount": "925",
     "image": ["http://localhost:4000/writings/header.jpg"],
   "datePublished": "",
@@ -43,23 +43,23 @@
 <meta property="og:url" content="http://localhost:4000/writings/"/>
 <meta property="og:type" content="article"/>
 <meta property="og:title" content="Writing Samples"/>
-<meta property="og:description" content=""/>
+<meta property="og:description" content="Description of writing samples from different academic programs."/>
 <meta property="og:image" content="http://localhost:4000/writings/header.jpg"/>
 <meta property="og:image:alt" content="Writing Samples"/>
 <meta property="og:site_name" content="Jonathan Chang" />
 <meta property="article:published_time" content="" />
 <meta property="article:modified_time" content="" />
-<meta property="article:tag" content="" />
+<meta property="article:tag" content="writing samples technical modeling robotics ethics analysis capstone" />
 <meta property="fb:admins" content="j.a.chang820" />
 <!-- Schema.org markup for Google -->
 <meta itemprop="name" content="Writing Samples">
-<meta itemprop="description" content="">
+<meta itemprop="description" content="Description of writing samples from different academic programs.">
 <meta itemprop="image" content="http://localhost:4000/writings/header.jpg">
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="">
 <meta name="twitter:title" content="Writing Samples">
-<meta name="twitter:description" content="">
+<meta name="twitter:description" content="Description of writing samples from different academic programs.">
 <meta name="twitter:creator" content="">
 <meta data-rh="true" name="twitter:label1" content="Word count"/>
 <meta data-rh="true" name="twitter:data1" content="925"/>
@@ -234,7 +234,7 @@
 
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork">
     <meta itemprop="headline" content="Writing Samples">
-
+<meta itemprop="description" content="Description of writing samples from different academic programs.">
 
 
     <div class="page-image">
