--- a/ucla/index.html
+++ b/ucla/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<title>Learning to learn. - Jonathan Chang</title>
 	<link rel="canonical" href="http://localhost:4000/ucla/">
-	<meta name="description" content="Software engineer.">
+	<meta name="description" content="Computer science technical breadth at UCLA and DataFest hackathon.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 <script type="application/ld+json">
@@ -20,8 +20,8 @@
     "@type": "WebPage",
     "@id": "http://localhost:4000"},
   "headline": "Learning to learn.",
-  "abstract": "",
-    "keywords": "",
+  "abstract": "Computer science technical breadth at UCLA and DataFest hackathon.",
+    "keywords": "ucla electrical engineering software datafest technical breadth hackathon academic independence robotics",
     "wordcount": "459",
     "image": ["http://localhost:4000/ucla/header.jpg"],
   "datePublished": "",
@@ -43,23 +43,23 @@
 <meta property="og:url" content="http://localhost:4000/ucla/"/>
 <meta property="og:type" content="article"/>
 <meta property="og:title" content="Learning to learn."/>
-<meta property="og:description" content=""/>
+<meta property="og:description" content="Computer science technical breadth at UCLA and DataFest hackathon."/>
 <meta property="og:image" content="http://localhost:4000/ucla/header.jpg"/>
 <meta property="og:image:alt" content="Learning to learn."/>
 <meta property="og:site_name" content="Jonathan Chang" />
 <meta property="article:published_time" content="" />
 <meta property="article:modified_time" content="" />
-<meta property="article:tag" content="" />
+<meta property="article:tag" content="ucla electrical engineering software datafest technical breadth hackathon academic independence robotics" />
 <meta property="fb:admins" content="j.a.chang820" />
 <!-- Schema.org markup for Google -->
 <meta itemprop="name" content="Learning to learn.">
-<meta itemprop="description" content="">
+<meta itemprop="description" content="Computer science technical breadth at UCLA and DataFest hackathon.">
 <meta itemprop="image" content="http://localhost:4000/ucla/header.jpg">
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="">
 <meta name="twitter:title" content="Learning to learn.">
-<meta name="twitter:description" content="">
+<meta name="twitter:description" content="Computer science technical breadth at UCLA and DataFest hackathon.">
 <meta name="twitter:creator" content="">
 <meta data-rh="true" name="twitter:label1" content="Word count"/>
 <meta data-rh="true" name="twitter:data1" content="459"/>
@@ -234,7 +234,7 @@
 
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork">
     <meta itemprop="headline" content="Learning to learn.">
-
+<meta itemprop="description" content="Computer science technical breadth at UCLA and DataFest hackathon.">
 
 
     <div class="page-image">
