--- a/tags.html
+++ b/tags.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8">
 	<title>Tags - Jonathan Chang</title>
 	<link rel="canonical" href="http://localhost:4000/tags.html">
-	<meta name="description" content="Software engineer.">
+	<meta name="description" content="Software engineer in training.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 <script type="application/ld+json">
