updated front text a bit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   "headline": "Jonathan Chang Personal Site",
   "abstract": "Recent credentials and projects by Jonathan Chang.",
     "keywords": "jonathan chang resume ucla micromasters writings software engineering creative",
-    "wordcount": "199",
+    "wordcount": "183",
     "image": ["http://localhost:4000/header.jpg"],
   "datePublished": "",
   "dateModified": "",
@@ -62,7 +62,7 @@
 <meta name="twitter:description" content="Recent credentials and projects by Jonathan Chang.">
 <meta name="twitter:creator" content="">
 <meta data-rh="true" name="twitter:label1" content="Word count"/>
-<meta data-rh="true" name="twitter:data1" content="199"/>
+<meta data-rh="true" name="twitter:data1" content="183"/>
 <meta name="twitter:image:src" content="http://localhost:4000/header.jpg">
 	<!-- Windows Phone -->
 	<meta name="msapplication-navbutton-color" content="#311e3e">
@@ -100,12 +100,19 @@
   <h1>Hi, I'm Jonathan Chang!</h1>
 
 
-<p>I've always had an active imagination for improving systems that interact with people. I'd often jot down and sketch out ideas in a notebook. I had a <a class="half-link" href="/past_career/">rewarding career</a> as a <b>warehouse administrator assistant</b>  that required <em>creative problem solving</em> and <em>communication</em>. My efforts had an impact on people in the supply chain, but I wanted to work on broader problems and build more lasting solutions. So I quit my job and went back to school.</p>
+<p>I've always had an active imagination for improving systems that interact with people. I'd often jot down and sketch out ideas in a notebook. I had a <a class="half-link" href="/past_career/">rewarding career</a> as a <b>warehouse administrator assistant</b>  that required <em>creative problem solving</em> and <em>communication</em>. My efforts had an impact in the supply chain, but I wanted to work on broader problems. So I quit my job and went back to school.</p>
 
-<p>At the start of 2019, I received my <b>Electrical Engineering B.S.</b> diploma from <b>UCLA</b>, where above anything else I learned to be <em>proactive</em> and <em>educationally independent</em>. I realized my passion was in software engineering, so I took more than the requisite number of courses for <a class="half-link" href="/ucla/">my technical breadth</a>. Since then, I've completed a <b>MITx Micromasters in Statistics and Data Science</b>, a <em>graduate level program</em> that taught me the underlying <a class="half-link" href="/mitx/">statistical assumptions</a> behind machine learning. I'm also working on an <b>ASU MasterTrack in Cybersecurity</b>, which is teaching me how to <em>test</em> and <em>identify vulnerabilities</em> in <a class="half-link" href="/asu/">software security</a>.</p>
+<p>In 2019, I received my <b>Electrical Engineering B.S.</b> diploma from <b>UCLA</b>, where above anything else I learned to be <em>proactive</em> and <em>educationally independent</em> to realize my passion in <a class="half-link" href="/ucla/">software engineering</a>. I've since completed a <b>MITx Micromasters in Statistics and Data Science</b>, a <em>graduate level program</em> that taught me the underlying <a class="half-link" href="/mitx/">statistical assumptions</a> behind machine learning. I'm also learning to <em>test</em> and <em>identify vulnerabilities</em> in <a class="half-link" href="/asu/">software security</a> from an <b>ASU MasterTrack in Cybersecurity</b>. Here are some <a class="half-link" href="/writings/">writing samples</a> that I'm particularly proud of. <b>Thank you for your interest</b>!</p>
 
-<p>Please check out some <a class="half-link" href="/writings/">writing samples</a>. Here's the <a class="half-link" href="/assets/resume.pdf" target="_blank">resume</a> in PDF. <b>Thank you for your interest</b>!</p>
 
+<div class="focus-panel">
+  <div class="focus-inner">
+    <span class="fas fa-angle-double-right"></span>
+    <a class="focus-link" href="/assets/resume.pdf" target="blank">
+    Resume (PDF)
+    </a>
+  </div>
+</div>
     </div>
     <div class="half__image">
       <div class="social-bottom">
