--- a/asu/index.html
+++ b/asu/index.html
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Sampling masters degrees. - Jonathan Chang</title>
-	<link rel="canonical" href="http://localhost:4000/asu/">
+	<link rel="canonical" href="http://www.jonchang.org/asu/">
 	<meta name="description" content="ASU Cybersecurity MasterTrack and how it compares to its masters program.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
@@ -18,12 +18,12 @@
   "@type": "BlogPosting",
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "http://localhost:4000"},
+    "@id": "http://www.jonchang.org"},
   "headline": "Sampling masters degrees.",
   "abstract": "ASU Cybersecurity MasterTrack and how it compares to its masters program.",
     "keywords": "asu cybersecurity mastertrack masters software security coursera testing cryptography",
     "wordcount": "553",
-    "image": ["http://localhost:4000/asu/header.jpg"],
+    "image": ["http://www.jonchang.org/asu/header.jpg"],
   "datePublished": "",
   "dateModified": "",
   "author": {
@@ -34,17 +34,17 @@
     "logo": {
         "@type": "ImageObject",
         "encodingFormat": "image/png",
-        "contentUrl": "http://localhost:4000/assets/img/branding/MVM-symbol-black.png",
-        "url": "http://localhost:4000/assets/img/branding/MVM-symbol-black.png"},
+        "contentUrl": "http://www.jonchang.org/assets/img/branding/MVM-symbol-black.png",
+        "url": "http://www.jonchang.org/assets/img/branding/MVM-symbol-black.png"},
     "name" : "Jonathan Chang"}
 }
 </script>
 <!-- Open Graph data -->
-<meta property="og:url" content="http://localhost:4000/asu/"/>
+<meta property="og:url" content="http://www.jonchang.org/asu/"/>
 <meta property="og:type" content="article"/>
 <meta property="og:title" content="Sampling masters degrees."/>
 <meta property="og:description" content="ASU Cybersecurity MasterTrack and how it compares to its masters program."/>
-<meta property="og:image" content="http://localhost:4000/asu/header.jpg"/>
+<meta property="og:image" content="http://www.jonchang.org/asu/header.jpg"/>
 <meta property="og:image:alt" content="Sampling masters degrees."/>
 <meta property="og:site_name" content="Jonathan Chang" />
 <meta property="article:published_time" content="" />
@@ -54,7 +54,7 @@
 <!-- Schema.org markup for Google -->
 <meta itemprop="name" content="Sampling masters degrees.">
 <meta itemprop="description" content="ASU Cybersecurity MasterTrack and how it compares to its masters program.">
-<meta itemprop="image" content="http://localhost:4000/asu/header.jpg">
+<meta itemprop="image" content="http://www.jonchang.org/asu/header.jpg">
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="">
@@ -63,7 +63,7 @@
 <meta name="twitter:creator" content="">
 <meta data-rh="true" name="twitter:label1" content="Word count"/>
 <meta data-rh="true" name="twitter:data1" content="553"/>
-<meta name="twitter:image:src" content="http://localhost:4000/asu/header.jpg">
+<meta name="twitter:image:src" content="http://www.jonchang.org/asu/header.jpg">
 	<!-- Windows Phone -->
 	<meta name="msapplication-navbutton-color" content="#311e3e">
 	<!-- iOS Safari -->
