--- a/past_career/index.html
+++ b/past_career/index.html
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>It was rewarding, but I wanted to solve bigger problems. - Jonathan Chang</title>
-	<link rel="canonical" href="http://localhost:4000/past_career/">
+	<link rel="canonical" href="http://www.jonchang.org/past_career/">
 	<meta name="description" content="Challenges in past career as warehouse administrator assistant.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
@@ -18,12 +18,12 @@
   "@type": "BlogPosting",
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "http://localhost:4000"},
+    "@id": "http://www.jonchang.org"},
   "headline": "It was rewarding, but I wanted to solve bigger problems.",
   "abstract": "Challenges in past career as warehouse administrator assistant.",
     "keywords": "warehouse logistics administrator assistant communication",
     "wordcount": "650",
-    "image": ["http://localhost:4000/past_career/header.jpg"],
+    "image": ["http://www.jonchang.org/past_career/header.jpg"],
   "datePublished": "",
   "dateModified": "",
   "author": {
@@ -34,17 +34,17 @@
     "logo": {
         "@type": "ImageObject",
         "encodingFormat": "image/png",
-        "contentUrl": "http://localhost:4000/assets/img/branding/MVM-symbol-black.png",
-        "url": "http://localhost:4000/assets/img/branding/MVM-symbol-black.png"},
+        "contentUrl": "http://www.jonchang.org/assets/img/branding/MVM-symbol-black.png",
+        "url": "http://www.jonchang.org/assets/img/branding/MVM-symbol-black.png"},
     "name" : "Jonathan Chang"}
 }
 </script>
 <!-- Open Graph data -->
-<meta property="og:url" content="http://localhost:4000/past_career/"/>
+<meta property="og:url" content="http://www.jonchang.org/past_career/"/>
 <meta property="og:type" content="article"/>
 <meta property="og:title" content="It was rewarding, but I wanted to solve bigger problems."/>
 <meta property="og:description" content="Challenges in past career as warehouse administrator assistant."/>
-<meta property="og:image" content="http://localhost:4000/past_career/header.jpg"/>
+<meta property="og:image" content="http://www.jonchang.org/past_career/header.jpg"/>
 <meta property="og:image:alt" content="It was rewarding, but I wanted to solve bigger problems."/>
 <meta property="og:site_name" content="Jonathan Chang" />
 <meta property="article:published_time" content="" />
@@ -54,7 +54,7 @@
 <!-- Schema.org markup for Google -->
 <meta itemprop="name" content="It was rewarding, but I wanted to solve bigger problems.">
 <meta itemprop="description" content="Challenges in past career as warehouse administrator assistant.">
-<meta itemprop="image" content="http://localhost:4000/past_career/header.jpg">
+<meta itemprop="image" content="http://www.jonchang.org/past_career/header.jpg">
 <!-- Twitter Card data -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="">
@@ -63,7 +63,7 @@
 <meta name="twitter:creator" content="">
 <meta data-rh="true" name="twitter:label1" content="Word count"/>
 <meta data-rh="true" name="twitter:data1" content="650"/>
-<meta name="twitter:image:src" content="http://localhost:4000/past_career/header.jpg">
+<meta name="twitter:image:src" content="http://www.jonchang.org/past_career/header.jpg">
 	<!-- Windows Phone -->
 	<meta name="msapplication-navbutton-color" content="#311e3e">
 	<!-- iOS Safari -->
